--- a/PhysiotherapyPortfolio/Physiotherapy.UIL/Views/Shared/_Layout.cshtml
+++ b/PhysiotherapyPortfolio/Physiotherapy.UIL/Views/Shared/_Layout.cshtml
@@ -19,11 +19,12 @@
     <link rel="stylesheet" href="~/fonts/fontAwesome/css/all.css">
     <link rel="stylesheet" href="~/fonts/fontAwesome/css/all.min.css">
     <link rel="stylesheet" href="~/fonts/fontAwesome/css/v4-shims.css">
+    <link href="~/Content/open-iconic-bootstrap.css" rel="stylesheet">
     @Styles.Render("~/Content/css")
-    @RenderSection("Styles",false)
+    @RenderSection("Styles", false)
     @Scripts.Render("~/bundles/modernizr")
     <link href="~/Styles/navbar.css" rel="stylesheet" />
-    <link href="~/Styles/custom-class.css" rel="stylesheet" />
+    <link href="~/Styles/CustomClass/custom-class.css" rel="stylesheet" />
 </head>
 <body>
     <div class="d-flex">
