--- a/PhysiotherapyPortfolio/Physiotherapy.UIL/Views/Shared/_NavbarSecond.cshtml
+++ b/PhysiotherapyPortfolio/Physiotherapy.UIL/Views/Shared/_NavbarSecond.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Physiotherapy.Common._Resources
 @using System.Globalization
 @using Physiotherapy.BLL
-@using Physiotherapic.Model
+@using Physiotherapy.Model
 
 <nav class="navbar navbar-expand navbar-light bg-light navbar-second">
     @if (ViewBag.Path != null && ViewBag.Path == true)
