--- a/PhysiotherapyPortfolio/Physiotherapy.UIL/Views/Shared/_Messages.cshtml
+++ b/PhysiotherapyPortfolio/Physiotherapy.UIL/Views/Shared/_Messages.cshtml
@@ -16,7 +16,7 @@
 }
 @if (msg != null)
 {
-<div id="message" class="d-flex justify-content-xl-center">
+<div id="message" class="d-flex justify-content-center">
     <div class="@String.Join("", "alert alert-", msg.MsgType.ToString()) alert-dismissible fade show">
         @if (msg.MsgType == eUIMsgType.danger)
             {
