--- a/PhysiotherapyPortfolio/Physiotherapy.UIL/Views/Cv/Index.cshtml
+++ b/PhysiotherapyPortfolio/Physiotherapy.UIL/Views/Cv/Index.cshtml
@@ -225,6 +225,7 @@ else
 
             @*  Education *@
             $('#Grade').GradeMask();
+            $('#Grade').val("");
         });
 
         $('#h-personalInfo').on('click', function () {
