--- a/PhysiotherapyPortfolio/Physiotherapy.UIL/Views/Cv/_EducationCreate.cshtml
+++ b/PhysiotherapyPortfolio/Physiotherapy.UIL/Views/Cv/_EducationCreate.cshtml
@@ -36,125 +36,98 @@
                               {
                                   @class = "form-control width-fill input-border",
                                   type = "text",
-                                  placeholder = Resource.School
+                                  placeholder = Resource.ExDegree
                               }
                           })
                         @Html.ValidationMessageFor(model => model.Degree, "", new { @class = "text-error" })
                     </div>
-                    </div>
-                    <div class="form-group">
-                        <label>
-                            @Html.LabelFor(model => model.School)*
-                        </label>
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text">
-                                    <i class="fas fa-university"></i>
-                                </span>
-                            </div>
-                            @Html.EditorFor(model => model.School, new
-                              {
-                                  htmlAttributes = new
-                                  {
-                                      @class = "form-control width-fill input-border",
-                                      type = "text",
-                                      placeholder = Resource.School
-                                  }
-                              })
+                </div>
+                <div class="form-group">
+                    <label>
+                        @Html.LabelFor(model => model.School)*
+                    </label>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">
+                                <i class="fas fa-university"></i>
+                            </span>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <label>
-                            @Html.LabelFor(model => model.Department)*
-                        </label>
-                        @Html.EditorFor(model => model.Department, new
+                        @Html.EditorFor(model => model.School, new
                           {
                               htmlAttributes = new
                               {
                                   @class = "form-control width-fill input-border",
                                   type = "text",
-                                  placeholder = Resource.School
+                                  placeholder = Resource.ExSchool
                               }
                           })
                     </div>
-                    <div class="row">
-                        <div class="form-group col">
-                            <label>
-                                @Html.LabelFor(model => model.StartDate)*
-                            </label>
-                            <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">
-                                        <i class="fas fa-calendar-alt"></i>
-                                    </span>
-                                </div>
-                                @Html.EditorFor(model => model.StartDate,
-                                new
-                                {
-                                    htmlAttributes = new
-                                    {
+                </div>
+                <div class="form-group">
+                    <label>
+                        @Html.LabelFor(model => model.Department)*
+                    </label>
+                    @Html.EditorFor(model => model.Department, new
+                      {
+                          htmlAttributes = new
+                          {
+                              @class = "form-control width-fill input-border",
+                              type = "text",
+                              placeholder = Resource.ExDeparture
+                          }
+                      })
+                </div>
+                <div class="row">
+                    <div class="form-group col">
+                        <label>
+                            @Html.LabelFor(model => model.StartYear)*
+                        </label>
+                        <div class="input-group">
+                            @Html.DropDownListFor(model => model.StartYear, (IEnumerable<SelectListItem>)ViewBag.dpYears,
+                            new
+                            {
 
-                                        @class = "form-control width-fill",
-                                        type = "text",
-                                        placeholder = Resource.School
-                                    }
-                                })
-                                <span class="input-group-append">
-                                    <span class="input-group-text border-left-0">
-                                    </span>
-                                </span>
-                            </div>
+                                    @class = "form-control width-medium",
+                            })
                         </div>
-                        <div class="form-group col">
-                            <label>
-                                @Html.LabelFor(model => model.GraduationDate)*
-                            </label>
-                            <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">
-                                        <i class="fas fa-calendar-alt"></i>
-                                    </span>
-                                </div>
-                                @Html.EditorFor(model => model.GraduationDate, new
-                           {
-                               htmlAttributes = new
-                               {
-                                   @class = "form-control width-fill",
-                                   type = "text",
-                               }
-                           })
-                                <span class="input-group-append">
-                                    <span class="input-group-text border-left-0">
-                                    </span>
-                                </span>
-                            </div>
+                    </div>
+                    <div class="form-group col">
+                        <label>
+                            @Html.LabelFor(model => model.GraduationYear)*
+                        </label>
+                        <div class="input-group">
+                            @Html.DropDownListFor(model => model.GraduationYear, (IEnumerable<SelectListItem>)ViewBag.dpYears, new
+                            {
+                               @class = "form-control width-medium",
+                            })
                         </div>
-                        <div class="form-group col">
-                            <label>
-                                @Html.LabelFor(model => model.Grade)*
-                            </label>
-                            <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">
-                                       <i class="far fa-star"></i>
-                                    </span>
-                                </div>
-                                @Html.EditorFor(model => model.Grade, new
-                           {
-                               htmlAttributes = new
-                               {
-                                   @class = "form-control width-fill",
-                                   max = 20
-                               }
-                           })
-                                <span class="input-group-append">
-                                    <span class="input-group-text border-left-0">
-                                    </span>
+                    </div>
+                    <div class="form-group col">
+                        <label>
+                            @Html.LabelFor(model => model.Grade)*
+                        </label>
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">
+                                    <i class="far fa-star"></i>
                                 </span>
                             </div>
+                            @Html.EditorFor(model => model.Grade, new
+                       {
+                           htmlAttributes = new
+                           {
+                               @class = "form-control width-fill",
+                               max = 20
+                           }
+                       })
+                            <span class="input-group-append">
+                                <span class="input-group-text border-left-0">
+                                </span>
+                            </span>
                         </div>
                     </div>
                 </div>
+            </div>
             <div class="modal-footer">
                 <div class="d-flex justify-content-between">
                     <div>
